# Sparse-Attention-Exploration

./: .gitignore  README.md  proposal.md  pyproject.toml  requirements.txt
configs/: local_small_bigbird.yaml  local_small_full.yaml  local_small_nsa.yaml  local_small_nsa_b4.yaml  local_small_nsa_gated.yaml  local_small_sliding.yaml  local_tiny_full.yaml  medium_bigbird.yaml  medium_full.yaml  medium_nsa.yaml  medium_nsa_gated.yaml  small_bigbird.yaml  small_full.yaml  small_nsa.yaml  small_nsa_gated.yaml  small_sliding.yaml  tiny_bigbird.yaml  tiny_full.yaml  tiny_nsa.yaml  tiny_nsa_gated.yaml  tiny_sliding.yaml
reports/: experiment_plan.md  local_small_results.md  medium_wikitext_results.md  technical_overview.md
results/local_small/: benchmark.csv  budget.csv  eval.csv  local_small_bigbird.metrics.jsonl  local_small_full.metrics.jsonl  local_small_nsa.metrics.jsonl  local_small_nsa_gated.metrics.jsonl  local_small_sliding.metrics.jsonl  retrieval.csv  summary.md
results/medium_wikitext/: benchmark.csv  budget.csv  eval.csv  retrieval.csv  (+5 more)
scripts/: eval_fair_nsa_suite.sh  eval_local_nsa_suite.sh  eval_small_suite.sh  launch_small_tmux.sh  run_fair_nsa_suite.sh  run_local_nsa_suite.sh  run_local_small_baselines.sh  run_medium_suite.sh  run_small_suite.sh  smoke.sh  train_4gpu.sh  watch_and_eval_fair_nsa.sh  watch_and_eval_local_nsa.sh  watch_and_eval_local_small.sh
sparse_lm/: __init__.py  benchmark.py  budget.py  data.py  evaluate.py  model.py  retrieval.py  summarize.py  train.py  utils.py
tests/: test_attention.py  test_model.py  test_retrieval.py
(+6 files in other folders)
