[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-attention-lm"
version = "0.1.0"
description = "GPT-style language model experiments for full, sliding-window, BigBird-style, and NSA-style sparse attention."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "datasets>=2.18",
  "transformers>=4.40",
  "tokenizers>=0.15",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "numpy>=1.24",
  "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["sparse_lm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
